LDER: Fixed chat display on Firefox (and Windows mobile ?)

--- a/Sampler/www/css/samplere.css
+++ b/Sampler/www/css/samplere.css
@@ -248,19 +248,26 @@ span.fa-star:after {
 }
 
 .chat-container>div>div {
-  display: table;
+  display: block;
 }
 .chat-container>div>div>.panel {
-  vertical-align: bottom;
-  display: table-cell;
-  float: none;
+  display: block;
+  bottom: 0;
+  position: absolute;
   background: transparent;
+  width: 100%;
 }
 .chat-container>div>div>.panel>* {
   pointer-events: auto;
 }
+.chat-container>div>div>.panel .window-actions {
+  cursor: pointer;
+}
 .chat-container .chat-top-bar {
   height: auto;
+}
+.chat-window.minimized .panel {
+  height: 111px;
 }
 .chat-msg.chat-msg-sent {
   background-color: #f3f3ff;
@@ -278,6 +285,9 @@ span.fa-star:after {
   }
 }
 
+.msg-container-base {
+  height: calc(100% - 110px);
+}
 .msg-container-base .msg-container {
   padding: 4px 10px;
 }
